# EggDone

./: AGENTS.md  FUNCTION_OPTIMIZATION_TODO.md  LICENSE  OPTIMIZATION_TODO.md  README.md  VIEWS_AND_FOCUS_TODO.md  package.json  pnpm-lock.yaml  vite.config.js
.claude/handoffs/: 2026-06-06-222909-eggdone-mvp-and-optimization-roadmap.md  2026-06-07-101812-eggdone-p2-desktop-integration.md  2026-06-07-210627-eggdone-sync-release-and-feature-roadmap.md  2026-06-07-213101-eggdone-f1-complete-and-f2-next.md  2026-06-09-181258-eggdone-f2-due-date-and-compact-actions.md  2026-06-09-232734-eggdone-f3-groups-and-next.md  2026-06-10-175944-eggdone-feature-optimization.md  2026-06-12-023206-eggdone-function-optimization.md  2026-06-12-111449-eggdone-repeat-edit-scope.md  2026-06-12-124808-eggdone-notification-actions.md  2026-06-13-184303-eggdone-desktop-sync-sorting-groups-scroll.md  2026-06-15-125402-eggdone-due-time-v0-1-1.md  (+15 more)
docs/: I18N_SHARED_CONTRACT.md  INTERNATIONALIZATION_IMPLEMENTATION_PLAN.md  INTERNATIONALIZATION_RELEASE_NOTES.md  INTERNATIONALIZATION_ROADMAP.md  MANUAL_REGRESSION.md  NOTES_ATTACHMENTS_BACKUP_FORMAT.md  NOTES_ATTACHMENTS_IMPLEMENTATION_PLAN.md  NOTES_ATTACHMENTS_ROADMAP.md  NOTES_IMPLEMENTATION_PLAN.md  NOTES_ROADMAP.md  RELEASING_WINDOWS.md
mockups/: eggdone-features-mockup.html
scripts/: check-i18n-catalogs.mjs  check-i18n-hardcodes.mjs  verify-windows-installer.ps1
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  data_exchange.rs  db.rs  error_codes.rs  i18n.rs  lib.rs  main.rs  note_asset_store.rs  note_attachment_sync.rs  note_attachments.rs  note_sync.rs  notes.rs  panel_position.rs  reminders.rs  s3_sync.rs  schedule.rs  sync.rs  tray.rs
src-tauri/windows/: installer-hooks.nsh
桌面端/: 蛋定Todo-桌面端推荐文章.md
(+53 files in other folders)
